--- a/config/common/server.yaml
+++ b/config/common/server.yaml
@@ -1,18 +1,18 @@
 {{ range $index, $Map := .ServerCount }}
 persistentVolumeClaims:
+  ## H2 persistent volume claim BEGIN
   - metadata:
-      name: "{{.ApplicationName}}-postgresql-claim-{{$index}}"
+      name: "{{.ApplicationName}}-h2-claim-{{$index}}"
       labels:
-        app: "{{.ApplicationName}}-postgresql-{{$index}}"
-        application: "{{.ApplicationName}}"
-        service: "{{.ApplicationName}}-postgresql"
+        app: "{{.ApplicationName}}"
+        service: "{{.ApplicationName}}-kieserver-{{$index}}"
     spec:
       accessModes:
-        - ReadWriteOnce
+      - ReadWriteOnce
       resources:
         requests:
           storage: "1Gi"
-## PostgreSQL persistent volume claim END
+  ## H2 persistent volume claim END
 ## KIE server deployment config BEGIN
 deploymentConfigs:
   - metadata:
@@ -161,78 +161,12 @@ deploymentConfigs:
             - name: kieserver-keystore-volume
               secret:
                 secretName: "{{.ApplicationName}}-kieserver-{{$index}}-app-secret"
-  ## KIE server deployment config END
-  ## PostgreSQL deployment config BEGIN
-  - metadata:
-      name: "{{.ApplicationName}}-postgresql-{{$index}}"
-      labels:
-        app: "{{.ApplicationName}}-postgresql-{{$index}}"
-        application: "{{.ApplicationName}}"
-        service: "{{.ApplicationName}}-postgresql"
-    spec:
-      strategy:
-        type: Recreate
-      triggers:
-        - type: ImageChange
-          imageChangeParams:
-            automatic: true
-            containerNames:
-              - "{{.ApplicationName}}-postgresql"
-            from:
-              kind: ImageStreamTag
-              namespace: "openshift"
-              name: "postgresql:10"
-        - type: ConfigChange
-      replicas: 1
-      selector:
-        deploymentConfig: "{{.ApplicationName}}-postgresql-{{$index}}"
-      template:
-        metadata:
-          name: "{{.ApplicationName}}-postgresql-{{$index}}"
-          labels:
-            app: "{{.ApplicationName}}-postgresql-{{$index}}"
-            application: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-postgresql"
-            deploymentConfig: "{{.ApplicationName}}-postgresql-{{$index}}"
-        spec:
-          terminationGracePeriodSeconds: 60
-          containers:
-            - name: "{{.ApplicationName}}-postgresql"
-              image: postgresql
-              imagePullPolicy: Always
-              livenessProbe:
-                exec:
-                  command:
-                    - "/usr/libexec/check-container"
-                    - "--live"
-                initialDelaySeconds: 120
-                timeoutSeconds: 10
-              readinessProbe:
-                exec:
-                  command:
-                    - "/usr/libexec/check-container"
-                initialDelaySeconds: 5
-                timeoutSeconds: 1
-              ports:
-                - containerPort: 5432
-                  protocol: TCP
-              volumeMounts:
-                - mountPath: "/var/lib/pgsql/data"
-                  name: "{{.ApplicationName}}-postgresql-pvol"
-              env:
-                - name: POSTGRESQL_USER
-                  value: "rhpam"
-                - name: POSTGRESQL_PASSWORD
-                  value: "{{.AdminPassword}}"
-                - name: POSTGRESQL_DATABASE
-                  value: "rhpam7"
-                - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
-                  value: "100"
-          volumes:
-            - name: "{{.ApplicationName}}-postgresql-pvol"
+          ## H2 volume settings BEGIN
+            - name: "{{.ApplicationName}}-h2-pvol"
               persistentVolumeClaim:
-                claimName: "{{.ApplicationName}}-postgresql-claim-{{$index}}"
-## PostgreSQL deployment config END
+                claimName: "{{.ApplicationName}}-h2-claim-{{$index}}"
+          ## H2 volume settings END
+  ## KIE server deployment config END
 ## KIE server services BEGIN
 services:
   - spec:
@@ -271,22 +205,6 @@ services:
         service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
         description: "The JGroups ping port for clustering."
   ## KIE server services END
-  ## PostgreSQL service BEGIN
-  - metadata:
-      annotations:
-        description: The database server's port.
-      labels:
-        app: "{{.ApplicationName}}-postgresql-{{$index}}"
-        application: "{{.ApplicationName}}"
-        service: "{{.ApplicationName}}-postgresql"
-      name: "{{.ApplicationName}}-postgresql-{{$index}}"
-    spec:
-      ports:
-        - port: 5432
-          targetPort: 5432
-      selector:
-        deploymentConfig: "{{.ApplicationName}}-postgresql-{{$index}}"
-## PostgreSQL service END
 ## KIE server routes BEGIN
 routes:
   - id: "{{.ApplicationName}}-kieserver-{{$index}}-https"
