--- a/config/testdata/envs/authoring-postgres-lite.yaml
+++ b/config/testdata/envs/authoring-postgres-lite.yaml
@@ -180,12 +180,34 @@ console:
       tls:
         insecureEdgeTerminationPolicy: Redirect
         termination: passthrough
+
 ## KIE Servers BEGIN
 servers:
 ## RANGE BEGINS
 {{ range $index, $Map := .ServerCount }}
+- persistentVolumeClaims:
+  ## PostgreSQL persistent volume claim BEGIN
+    - metadata:
+        name: "{{.ApplicationName}}-postgresql-claim-{{$index}}"
+        labels:
+          app: "{{.ApplicationName}}-kieserver-{{$index}}"
+          application: "{{.ApplicationName}}"
+          service: "{{.ApplicationName}}-postgresql"
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: "1Gi"
+  ## PostgreSQL persistent volume claim END
+  ## H2 mark to delete persistent volume claim BEGIN
+    - metadata:
+        name: "{{.ApplicationName}}-h2-claim-{{$index}}"
+        annotations:
+          delete: "true"
+  ## H2 mark to delete persistent volume claim END
   ## KIE server deployment config BEGIN
-- deploymentConfigs:
+  deploymentConfigs:
   - metadata:
       name: "{{.ApplicationName}}-kieserver-{{$index}}"
     spec:
@@ -197,6 +219,10 @@ servers:
             resources:
               requests:
                 memory: 768Mi
+            volumeMounts:
+            - name: kieserver-keystore-volume
+              mountPath: "/etc/kieserver-secret-volume"
+              readOnly: true
             env:
             ## Test PWD BEGIN
             - name: KIE_ADMIN_PWD
@@ -212,14 +238,25 @@ servers:
             - name: RHPAM_PASSWORD
               value: AdminPwd
             ## Test PWD END
-            - name: KIE_SERVER_ID
-              value: "{{.ApplicationName}}-kieserver-{{$index}}"
-            - name: KIE_SERVER_HOST
-              value: ""
-            - name: KIE_SERVER_ROUTE_NAME
-              value: "{{.ApplicationName}}-kieserver-{{$index}}"
-            - name: KIE_SERVER_USE_SECURE_ROUTE_NAME
-              value: "false"
+            ## PostgreSQL driver settings BEGIN
+            - name: RHPAM_DRIVER
+              value: "postgresql"
+            - name: RHPAM_USERNAME
+              value: "rhpam"
+            #- name: RHPAM_PASSWORD
+            #  value: "{{.AdminPassword}}"
+            - name: RHPAM_XA_CONNECTION_PROPERTY_URL
+            - name: RHPAM_SERVICE_HOST
+              value: "{{.ApplicationName}}-postgresql-{{$index}}"
+            - name: RHPAM_SERVICE_PORT
+              value: "5432"
+            - name: KIE_SERVER_PERSISTENCE_DIALECT
+              value: "org.hibernate.dialect.PostgreSQLDialect"
+            - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
+              value: "30000"
+            - name: RHPAM_TX_ISOLATION
+              value: "TRANSACTION_READ_COMMITTED"
+            ## PostgreSQL driver settings END
             ## Maven config for local rhpamcentr BEGIN
             - name: MAVEN_REPOS
               value: "RHPAMCENTR,EXTERNAL"
@@ -232,6 +269,78 @@ servers:
             #- name: RHPAMCENTR_MAVEN_REPO_PASSWORD
             #  value: "{{.MavenPassword}}"
             ## Maven config for local rhpamcentr END
+  ## KIE server deployment config END
+  ## PostgreSQL deployment config BEGIN
+  - metadata:
+      name: "{{.ApplicationName}}-postgresql-{{$index}}"
+      labels:
+        app: "{{.ApplicationName}}-kieserver-{{$index}}"
+        application: "{{.ApplicationName}}"
+        service: "{{.ApplicationName}}-postgresql"
+    spec:
+      strategy:
+        type: Recreate
+      triggers:
+        - type: ImageChange
+          imageChangeParams:
+            automatic: true
+            containerNames:
+              - "{{.ApplicationName}}-postgresql"
+            from:
+              kind: ImageStreamTag
+              namespace: "openshift"
+              name: "postgresql:10"
+        - type: ConfigChange
+      replicas: 1
+      selector:
+        deploymentConfig: "{{.ApplicationName}}-postgresql-{{$index}}"
+      template:
+        metadata:
+          name: "{{.ApplicationName}}-postgresql-{{$index}}"
+          labels:
+            app: "{{.ApplicationName}}-kieserver-{{$index}}"
+            application: "{{.ApplicationName}}"
+            service: "{{.ApplicationName}}-postgresql"
+            deploymentConfig: "{{.ApplicationName}}-postgresql-{{$index}}"
+        spec:
+          terminationGracePeriodSeconds: 60
+          containers:
+            - name: "{{.ApplicationName}}-postgresql"
+              image: postgresql
+              imagePullPolicy: Always
+              livenessProbe:
+                exec:
+                  command:
+                    - "/usr/libexec/check-container"
+                    - "--live"
+                initialDelaySeconds: 120
+                timeoutSeconds: 10
+              readinessProbe:
+                exec:
+                  command:
+                    - "/usr/libexec/check-container"
+                initialDelaySeconds: 5
+                timeoutSeconds: 1
+              ports:
+                - containerPort: 5432
+                  protocol: TCP
+              volumeMounts:
+                - mountPath: "/var/lib/pgsql/data"
+                  name: "{{.ApplicationName}}-postgresql-pvol"
+              env:
+                - name: POSTGRESQL_USER
+                  value: "rhpam"
+                - name: POSTGRESQL_PASSWORD
+                  value: PostgresPwd
+                - name: POSTGRESQL_DATABASE
+                  value: "rhpam7"
+                - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
+                  value: "100"
+          volumes:
+            - name: "{{.ApplicationName}}-postgresql-pvol"
+              persistentVolumeClaim:
+                claimName: "{{.ApplicationName}}-postgresql-claim-{{$index}}"
+  ## PostgreSQL deployment config END
   ## KIE server deployment config END
 {{end}}
 ## RANGE ends
