--- a/config/testdata/expected/authoring.yaml
+++ b/config/testdata/expected/authoring.yaml
@@ -22,7 +22,7 @@ deploymentConfigs:
           app: prod-kieserver-0
           application: prod
           deploymentConfig: prod-kieserver-0
-          service: prod-kieserver-0
+          service: prod-kieserver
         name: prod-kieserver-0
       spec:
         containers:
@@ -74,26 +74,28 @@ deploymentConfigs:
           - name: KIE_SERVER_PERSISTENCE_DS
             value: java:/jboss/datasources/rhpam
           - name: RHPAM_DRIVER
-            value: postgresql
+            value: h2
           - name: RHPAM_USERNAME
-            value: rhpam
+            value: sa
           - name: RHPAM_PASSWORD
             value: AdminPwd
           - name: RHPAM_XA_CONNECTION_PROPERTY_URL
+            value: jdbc:h2:/opt/eap/standalone/data/rhpam
           - name: RHPAM_SERVICE_HOST
-            value: prod-postgresql-0
+            value: dummy_ignored
           - name: RHPAM_SERVICE_PORT
-            value: "5432"
+            value: "12345"
           - name: KIE_SERVER_PERSISTENCE_DIALECT
-            value: org.hibernate.dialect.PostgreSQLDialect
+            value: org.hibernate.dialect.H2Dialect
           - name: DROOLS_SERVER_FILTER_CLASSES
             value: "true"
           - name: RHPAMCENTR_MAVEN_REPO_PASSWORD
             value: MvnPwd
-          - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
-            value: "30000"
-          - name: RHPAM_TX_ISOLATION
-            value: TRANSACTION_READ_COMMITTED
+          - name: KIE_SERVER_HOST
+          - name: KIE_SERVER_ROUTE_NAME
+            value: prod-kieserver-0
+          - name: KIE_SERVER_USE_SECURE_ROUTE_NAME
+            value: "false"
           - name: RHPAMCENTR_MAVEN_REPO_SERVICE
             value: prod-rhpamcentr
           - name: RHPAMCENTR_MAVEN_REPO_PATH
@@ -148,6 +150,9 @@ deploymentConfigs:
         - name: kieserver-keystore-volume
           secret:
             secretName: prod-kieserver-0-app-secret
+        - name: prod-h2-pvol
+          persistentVolumeClaim:
+            claimName: prod-h2-claim-0
     test: false
     triggers:
     - imageChangeParams:
@@ -167,99 +172,7 @@ deploymentConfigs:
     replicas: 0
     unavailableReplicas: 0
     updatedReplicas: 0
-- metadata:
-    creationTimestamp: null
-    labels:
-      app: prod
-      service: prod-postgresql-0
-    name: prod-postgresql-0
-  spec:
-    replicas: 1
-    selector:
-      deploymentConfig: prod-postgresql-0
-    strategy:
-      resources: {}
-      type: Recreate
-    template:
-      metadata:
-        creationTimestamp: null
-        labels:
-          app: prod
-          deploymentConfig: prod-postgresql-0
-          service: prod-postgresql-0
-        name: prod-postgresql-0
-      spec:
-        containers:
-        - env:
-          - name: POSTGRESQL_USER
-            value: rhpam
-          - name: POSTGRESQL_PASSWORD
-            value: PostgresPwd
-          - name: POSTGRESQL_DATABASE
-            value: rhpam7
-          - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
-            value: "100"
-          image: postgresql
-          imagePullPolicy: Always
-          livenessProbe:
-            exec:
-              command:
-              - /usr/libexec/check-container
-              - --live
-            initialDelaySeconds: 120
-            timeoutSeconds: 10
-          name: prod-postgresql
-          ports:
-          - containerPort: 5432
-            protocol: TCP
-          readinessProbe:
-            exec:
-              command:
-              - /usr/libexec/check-container
-            initialDelaySeconds: 5
-            timeoutSeconds: 1
-          resources: {}
-          volumeMounts:
-          - mountPath: /var/lib/pgsql/data
-            name: prod-postgresql-pvol
-        terminationGracePeriodSeconds: 60
-        volumes:
-        - name: prod-postgresql-pvol
-          persistentVolumeClaim:
-            claimName: prod-postgresql-claim-0
-    test: false
-    triggers:
-    - imageChangeParams:
-        automatic: true
-        containerNames:
-        - prod-postgresql
-        from:
-          kind: ImageStreamTag
-          name: postgresql:9.6
-          namespace: openshift
-      type: ImageChange
-    - type: ConfigChange
-  status:
-    availableReplicas: 0
-    latestVersion: 0
-    observedGeneration: 0
-    replicas: 0
-    unavailableReplicas: 0
-    updatedReplicas: 0
 persistentVolumeClaims:
-- metadata:
-    creationTimestamp: null
-    labels:
-      app: prod
-      service: prod-postgresql-0
-    name: prod-postgresql-claim-0
-  spec:
-    accessModes:
-    - ReadWriteOnce
-    resources:
-      requests:
-        storage: 1Gi
-  status: {}
 - metadata:
     creationTimestamp: null
     labels:
@@ -279,8 +192,9 @@ routes:
       description: Route for KIE server's https service.
     creationTimestamp: null
     labels:
-      app: prod
-      service: prod-kieserver-0
+      app: prod-kieserver-0
+      application: prod
+      service: prod-kieserver
     name: prod-kieserver-0
   spec:
     host: ""
@@ -298,11 +212,12 @@ routes:
 services:
 - metadata:
     annotations:
-      description: All the KIE server web server's ports.
+      description: All the KIE server web server's ports. (KIE server)
     creationTimestamp: null
     labels:
-      app: prod
-      service: prod-kieserver-0
+      app: prod-kieserver-0
+      application: prod
+      service: prod-kieserver
     name: prod-kieserver-0
   spec:
     ports:
@@ -322,8 +237,9 @@ services:
       service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
     creationTimestamp: null
     labels:
-      app: prod
-      service: prod-kieserver-0
+      app: prod-kieserver-0
+      application: prod
+      service: prod-kieserver
     name: prod-kieserver-0-ping
   spec:
     clusterIP: None
@@ -333,21 +249,5 @@ services:
       targetPort: 8888
     selector:
       deploymentConfig: prod-kieserver-0
-  status:
-    loadBalancer: {}
-- metadata:
-    annotations:
-      description: The database server's port.
-    creationTimestamp: null
-    labels:
-      application: prod
-      service: prod-postgresql-0
-    name: prod-postgresql-0
-  spec:
-    ports:
-    - port: 5432
-      targetPort: 5432
-    selector:
-      deploymentConfig: prod-postgresql-0
   status:
     loadBalancer: {}
