improvements to configmap logic
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -14,7 +14,6 @@ rules:
   - configmaps
   - secrets
   - serviceaccounts
-  - rolebindings
   verbs:
   - '*'
 - apiGroups:
@@ -35,6 +34,18 @@ rules:
   - '*'
   verbs:
   - '*'
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - roles
+  - rolebindings
+  verbs:
+  - get
+  - list
+  - watch
+  - view
+  - create
+  - bind
 - apiGroups:
   - monitoring.coreos.com
   resources:
